# KernelPatchAgent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: patch_types.json
data/results/: claude_results.json  custom_results.json  gpt_results.json
descriptions/: code_summary.txt  coder.txt  elixir.txt  general.txt  orchestrator.txt  planner.txt  reviewer.txt  web_summary.txt
kernel_patcher/: __init__.py  __main__.py  analysis.py  config.py  diff.py  evaluation.py  inference.py  metrics.py  models.py  parser.py  pipeline.py  retry.py
kernel_patcher/agents/: __init__.py  registry.py  server.py  tools.py
prompts/: code_summary.txt  coder.txt  elixir.txt  general.txt  orchestrator.txt  planner.txt  reviewer.txt  web_summary.txt
tests/: conftest.py  test_agents.py  test_analysis.py  test_config.py  test_diff.py  test_evaluation.py  test_inference.py  test_metrics.py  test_models.py  test_parser.py  test_pipeline.py  test_retry.py
